# ruicom

./: .gitignore
ruicom/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.noetic  IMPLEMENTATION_SUMMARY.md  README.md  THIRD_PARTY_NOTICES.md  UPSTREAM_SOURCES.md  package.xml  setup.py
ruicom/.github/workflows/: ci.yml  noetic-verification.yml
ruicom/config/common/: behavior_actuator.yaml  behavior_executor.yaml  behavior_runtime.yaml  competition_perception.yaml  mission.yaml  mowen_serial_bridge.yaml  platform.yaml  recorder.yaml  safety.yaml  synthetic.yaml  system_manager.yaml  vendor_actuator_bridge.yaml  vendor_actuator_device.yaml  vendor_actuator_feedback.yaml  vision.yaml
ruicom/config/field_assets/: demo_quad_zones.yaml  mowen_raicom_contract_verified.yaml  mowen_raicom_default.yaml  mowen_raicom_packaged_field_verified.yaml  mowen_raicom_reference_field_verified.yaml
ruicom/config/judge_contracts/: file_drop_example.json
ruicom/config/manifests/: baseline_deploy_detector_manifest.json  mowen_packaged_field_detector_manifest.json  mowen_reference_field_detector_manifest.json
ruicom/config/models/: onnx_manifest_example.json
ruicom/config/task_graphs/: mowen_field_competition_tasks.yaml  mowen_reference_competition_semantic_tasks.yaml  mowen_reference_competition_tasks.yaml
ruicom/config/vendor_runtime/: mowen_mo_sergeant_managed_bundle.yaml  mowen_mo_sergeant_vendor_contract.yaml
ruicom/docker/: entrypoint.noetic.sh
ruicom/docs/: mowen_runtime_tracks.md  mowen_vendor_integration.md  upstream_alignment.md
ruicom/firmware/mowen_chassis_controller/: platformio.ini
ruicom/launch/: baseline.launch  baseline_contract.launch  baseline_deploy.launch  baseline_legacy.launch  contract.launch  contract_deploy.launch  core.launch  demo.launch  demo_synthetic.launch  deploy.launch  field_competition_deploy.launch  field_deploy.launch  field_real_navigation.launch  integration.launch  legacy.launch  managed_vendor_actuator.launch  managed_vendor_camera.launch  managed_vendor_chassis.launch  managed_vendor_navigation.launch  mowen_integration.launch  mowen_serial_vendor_runtime.launch  mowen_vendor_runtime.launch  mowen_vendor_sidecar.launch  nav777.launch  real_field_deploy.launch  reference_competition_deploy.launch  reference_field_deploy.launch  semantic_deploy.launch
ruicom/msg/: Detection.msg  DetectionArray.msg  FrameRegionCounts.msg  HealthState.msg  MissionState.msg  ZoneCapture.msg  ZoneCaptureDynamic.msg
ruicom/scripts/: behavior_actuator_node.py  behavior_executor_node.py  behavior_runtime_node.py  chassis_odometry_node.py  cmd_safety_mux_node.py  competition_perception_node.py  fake_base_feedback_publisher.py  fake_detection_array_publisher.py  fake_move_base_action_server.py  fake_twist_publisher.py  fake_vendor_actuator_ack_device.py  fake_vendor_actuator_device.py  fake_vendor_chassis_device.py  fixed_scene_image_publisher.py  managed_move_base_action_server.py  managed_scene_image_publisher.py  managed_vendor_actuator_ack_device.py  managed_vendor_chassis_device.py  mission_manager_node.py  mission_recorder_node.py  mowen_serial_bridge_node.py  platform_bridge_node.py  synthetic_scene_publisher.py  system_manager_node.py  vendor_actuator_bridge_node.py  vendor_actuator_device_node.py  vendor_actuator_feedback_node.py  vendor_feedback_node.py  vendor_launch_guard_node.py  vendor_runtime_guard_node.py  vendor_sidecar_contract_node.py  vision_counter_node.py
ruicom/src/ruikang_recon_baseline/: artifact_builders.py  artifact_projection.py  authoritative_replay.py  behavior_actions.py  behavior_actuator_core.py  common.py  (+70 more)
ruicom/tests/: baseline_contract_smoke.py  baseline_contract_smoke.test  baseline_deploy_feedback_timeout_smoke.py  baseline_deploy_feedback_timeout_smoke.test  baseline_deploy_smoke.py  baseline_deploy_smoke.test  baseline_integration_namespace_smoke.test  baseline_integration_smoke.py  baseline_integration_smoke.test  baseline_profile_smoke.test  baseline_smoke.py  behavior_runtime_smoke.py  demo_pipeline_smoke.py  dynamic_schema_integration_namespace_smoke.test  dynamic_schema_integration_smoke.py  dynamic_schema_integration_smoke.test  dynamic_schema_mismatch_smoke.py  dynamic_schema_mismatch_smoke.test  field_runtime_smoke.test  reference_field_runtime_smoke.test  test_acceptance_tier_validator.py  test_architecture_controls.py  test_behavior_action_execution.py  test_behavior_actuator_core.py  test_behavior_executor_core.py  test_behavior_executor_wiring.py  test_behavior_runtime_core.py  test_competition_launch_contract.py  test_competition_perception_core.py  test_core_logic.py  test_direct_vendor_entry_contracts.py  test_external_runtime_requirements.py  test_field_asset_release_builder.py  test_field_assets_platform.py  test_lifecycle_runtime.py  test_managed_runtime_extensions.py  test_managed_runtime_wrapper_contract.py  test_managed_vendor_bundle_gate.py  test_mission_behaviors.py  test_mission_plan.py  (+22 more)
ruicom/tools/: build_at32_firmware.sh  build_field_asset_release.py  provision_vendor_workspace_fixture.py  render_field_asset_regions.py  replay_authoritative_summary.py  run_managed_vendor_runtime.py  run_mowen_vendor_sidecar.sh  run_noetic_verification.sh  validate_acceptance_tiers.py  validate_external_runtime_requirements.py  validate_field_asset_release.py  validate_launch_contracts.py  validate_managed_vendor_bundle.py  validate_profile_contracts.py  validate_repository_hygiene.py  validate_runtime_graph.py  validate_static_python_contracts.py  validate_third_party_governance.py
ruikang_recon_optimized/: CMakeLists.txt  README.md  package.xml  setup.py
ruikang_recon_optimized/launch/: baseline.launch  demo_synthetic.launch
ruikang_recon_optimized/msg/: Detection.msg  DetectionArray.msg  MissionState.msg  ZoneCapture.msg
ruikang_recon_optimized/scripts/: cmd_safety_mux_node.py  mission_manager_node.py  mission_recorder_node.py  synthetic_scene_publisher.py  vision_counter_node.py
ruikang_recon_optimized/tests/: demo_profile_smoke.test  test_core_logic.py  test_repository_consistency.py
(+160 files in other folders)
