<?xml version="1.0"?>
<package format="2">
  <name>ruikang_recon_baseline</name>
  <version>0.2.0</version>
  <description>ROS1 reconnaissance baseline with explicit mission semantics, navigation adapters and engineering hardening.</description>

  <maintainer email="openai@example.com">OpenAI</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>move_base_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3</test_depend>
  <test_depend>rostest</test_depend>

  <export/>
</package>
