<?xml version="1.0"?>
<package format="2">
  <name>OrbbecSDK_ROS</name>
  <version>1.0.0</version>
  <description>Orbbec camera integration wrapper.</description>
  <maintainer email="chen@ruikang.dev">chen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
