<?xml version="1.0"?>
<package format="2">
  <name>car_bringup</name>
  <version>1.0.0</version>
  <description>MO-SERGEANT chassis bringup compatibility package.</description>
  <maintainer email="chen@ruikang.dev">chen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>ruikang_recon_baseline</exec_depend>
</package>
