<?xml version="1.0"?>
<package format="2">
  <name>nav_demo</name>
  <version>1.0.0</version>
  <description>MO-SERGEANT navigation bringup compatibility package.</description>
  <maintainer email="chen@ruikang.dev">chen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>ruikang_recon_baseline</exec_depend>
</package>
